--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -492,6 +492,436 @@ video {
   --tw-backdrop-saturate:  ;
   --tw-backdrop-sepia:  ;
 } 
+.container {
+  width: 100%;
+} 
+@media (min-width: 640px) {
+
+  .container {
+    max-width: 640px;
+  }
+} 
+@media (min-width: 768px) {
+
+  .container {
+    max-width: 768px;
+  }
+} 
+@media (min-width: 1024px) {
+
+  .container {
+    max-width: 1024px;
+  }
+} 
+@media (min-width: 1280px) {
+
+  .container {
+    max-width: 1280px;
+  }
+} 
+@media (min-width: 1536px) {
+
+  .container {
+    max-width: 1536px;
+  }
+} 
+.mx-auto {
+  margin-left: auto;
+  margin-right: auto;
+} 
+.my-12 {
+  margin-top: 3rem;
+  margin-bottom: 3rem;
+} 
+.mb-4 {
+  margin-bottom: 1rem;
+} 
+.mb-8 {
+  margin-bottom: 2rem;
+} 
+.mb-6 {
+  margin-bottom: 1.5rem;
+} 
 .block {
   display: block;
+} 
+.flex {
+  display: flex;
+} 
+.grid {
+  display: grid;
+} 
+.h-1\/2 {
+  height: 50%;
+} 
+.h-full {
+  height: 100%;
+} 
+.h-\[600px\] {
+  height: 600px;
+} 
+.h-\[400px\] {
+  height: 400px;
+} 
+.h-\[500px\] {
+  height: 500px;
+} 
+.h-5 {
+  height: 1.25rem;
+} 
+.h-20 {
+  height: 5rem;
+} 
+.h-10 {
+  height: 2.5rem;
+} 
+.max-h-\[500\] {
+  max-height: 500;
+} 
+.max-h-\[500px\] {
+  max-height: 500px;
+} 
+.max-h-\[400px\] {
+  max-height: 400px;
+} 
+.max-h-\[600px\] {
+  max-height: 600px;
+} 
+.w-full {
+  width: 100%;
+} 
+.w-1\/2 {
+  width: 50%;
+} 
+.w-1\/3 {
+  width: 33.333333%;
+} 
+.w-\[400px\] {
+  width: 400px;
+} 
+.w-\[800px\] {
+  width: 800px;
+} 
+.w-5 {
+  width: 1.25rem;
+} 
+.w-20 {
+  width: 5rem;
+} 
+.w-10 {
+  width: 2.5rem;
+} 
+.flex-1 {
+  flex: 1 1 0%;
+} 
+.grid-cols-\[1fr_40px\] {
+  grid-template-columns: 1fr 40px;
+} 
+.grid-cols-\[1fr_80px\] {
+  grid-template-columns: 1fr 80px;
+} 
+.grid-cols-\[1fr_200px\] {
+  grid-template-columns: 1fr 200px;
+} 
+.grid-cols-\[1fr_auto\] {
+  grid-template-columns: 1fr auto;
+} 
+.grid-rows-\[40px_1fr_auto\] {
+  grid-template-rows: 40px 1fr auto;
+} 
+.grid-rows-\[40px_1fr_40px\] {
+  grid-template-rows: 40px 1fr 40px;
+} 
+.grid-rows-\[60px_1fr_auto\] {
+  grid-template-rows: 60px 1fr auto;
+} 
+.grid-rows-\[50px_1fr_auto\] {
+  grid-template-rows: 50px 1fr auto;
+} 
+.flex-row {
+  flex-direction: row;
+} 
+.flex-col {
+  flex-direction: column;
+} 
+.place-content-center {
+  place-content: center;
+} 
+.place-items-center {
+  place-items: center;
+} 
+.content-center {
+  align-content: center;
+} 
+.items-center {
+  align-items: center;
+} 
+.justify-center {
+  justify-content: center;
+} 
+.gap-x-10 {
+  -moz-column-gap: 2.5rem;
+       column-gap: 2.5rem;
+} 
+.gap-y-2 {
+  row-gap: 0.5rem;
+} 
+.gap-x-44 {
+  -moz-column-gap: 11rem;
+       column-gap: 11rem;
+} 
+.gap-x-4 {
+  -moz-column-gap: 1rem;
+       column-gap: 1rem;
+} 
+.gap-x-2 {
+  -moz-column-gap: 0.5rem;
+       column-gap: 0.5rem;
+} 
+.gap-x-12 {
+  -moz-column-gap: 3rem;
+       column-gap: 3rem;
+} 
+.overflow-auto {
+  overflow: auto;
+} 
+.rounded {
+  border-radius: 0.25rem;
+} 
+.rounded-md {
+  border-radius: 0.375rem;
+} 
+.rounded-full {
+  border-radius: 9999px;
+} 
+.rounded-lg {
+  border-radius: 0.5rem;
+} 
+.rounded-tl-md {
+  border-top-left-radius: 0.375rem;
+} 
+.rounded-tr-md {
+  border-top-right-radius: 0.375rem;
+} 
+.border-2 {
+  border-width: 2px;
+} 
+.border-4 {
+  border-width: 4px;
+} 
+.border {
+  border-width: 1px;
+} 
+.border-black {
+  --tw-border-opacity: 1;
+  border-color: rgb(0 0 0 / var(--tw-border-opacity));
+} 
+.border-gray-200 {
+  --tw-border-opacity: 1;
+  border-color: rgb(229 231 235 / var(--tw-border-opacity));
+} 
+.border-gray-800 {
+  --tw-border-opacity: 1;
+  border-color: rgb(31 41 55 / var(--tw-border-opacity));
+} 
+.bg-background {
+  --tw-bg-opacity: 1;
+  background-color: rgb(39 39 44 / var(--tw-bg-opacity));
+} 
+.bg-white {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+} 
+.bg-blue-200 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(191 219 254 / var(--tw-bg-opacity));
+} 
+.bg-blue-700 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(29 78 216 / var(--tw-bg-opacity));
+} 
+.bg-black {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+} 
+.bg-slate-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(100 116 139 / var(--tw-bg-opacity));
+} 
+.bg-slate-800 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(30 41 59 / var(--tw-bg-opacity));
+} 
+.bg-slate-700 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(51 65 85 / var(--tw-bg-opacity));
+} 
+.bg-slate-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(71 85 105 / var(--tw-bg-opacity));
+} 
+.bg-slate-950 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(2 6 23 / var(--tw-bg-opacity));
+} 
+.bg-slate-200 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(226 232 240 / var(--tw-bg-opacity));
+} 
+.bg-slate-900 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(15 23 42 / var(--tw-bg-opacity));
+} 
+.p-2 {
+  padding: 0.5rem;
+} 
+.px-10 {
+  padding-left: 2.5rem;
+  padding-right: 2.5rem;
+} 
+.px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+} 
+.py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+} 
+.py-20 {
+  padding-top: 5rem;
+  padding-bottom: 5rem;
+} 
+.px-44 {
+  padding-left: 11rem;
+  padding-right: 11rem;
+} 
+.px-4 {
+  padding-left: 1rem;
+  padding-right: 1rem;
+} 
+.py-8 {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+} 
+.py-44 {
+  padding-top: 11rem;
+  padding-bottom: 11rem;
+} 
+.py-4 {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+} 
+.px-6 {
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+} 
+.px-20 {
+  padding-left: 5rem;
+  padding-right: 5rem;
+} 
+.pt-20 {
+  padding-top: 5rem;
+} 
+.pt-5 {
+  padding-top: 1.25rem;
+} 
+.pt-4 {
+  padding-top: 1rem;
+} 
+.pt-8 {
+  padding-top: 2rem;
+} 
+.pb-4 {
+  padding-bottom: 1rem;
+} 
+.pb-12 {
+  padding-bottom: 3rem;
+} 
+.pt-12 {
+  padding-top: 3rem;
+} 
+.text-center {
+  text-align: center;
+} 
+.align-middle {
+  vertical-align: middle;
+} 
+.align-bottom {
+  vertical-align: bottom;
+} 
+.text-4xl {
+  font-size: 2.25rem;
+  line-height: 2.5rem;
+} 
+.text-2xl {
+  font-size: 1.5rem;
+  line-height: 2rem;
+} 
+.font-bold {
+  font-weight: 700;
+} 
+.text-blue-500 {
+  --tw-text-opacity: 1;
+  color: rgb(59 130 246 / var(--tw-text-opacity));
+} 
+.text-white {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+} 
+.shadow {
+  --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+} 
+.shadow-xl {
+  --tw-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+} 
+.\*\:border > * {
+  border-width: 1px;
+} 
+.\*\:border-white > * {
+  --tw-border-opacity: 1;
+  border-color: rgb(255 255 255 / var(--tw-border-opacity));
+} 
+.\*\:border-gray-500 > * {
+  --tw-border-opacity: 1;
+  border-color: rgb(107 114 128 / var(--tw-border-opacity));
+} 
+.\*\:border-gray-800 > * {
+  --tw-border-opacity: 1;
+  border-color: rgb(31 41 55 / var(--tw-border-opacity));
+} 
+.\*\:border-gray-700 > * {
+  --tw-border-opacity: 1;
+  border-color: rgb(55 65 81 / var(--tw-border-opacity));
+} 
+.\*\:bg-transparent > * {
+  background-color: transparent;
+} 
+.\*\:p-2 > * {
+  padding: 0.5rem;
+} 
+.\*\:px-4 > * {
+  padding-left: 1rem;
+  padding-right: 1rem;
+} 
+.\*\:py-2 > * {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+} 
+.\*\:px-6 > * {
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+} 
+.\*\:text-sm > * {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+} 
+@media (min-width: 768px) {
+
+  .md\:w-\[800px\] {
+    width: 800px;
+  }
 }
