--- a/views/layout.pug
+++ b/views/layout.pug
@@ -2,6 +2,7 @@ doctype html
 html
   head
     title= title
-    link(rel='stylesheet', href='/styles/style.css')
-  body
+    link(rel='stylesheet', href='./styles/style.css')
+    script(src="https://kit.fontawesome.com/fc5a762e4d.js" crossorigin="anonymous") 
+  body.bg-background
     block content
