--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -575,6 +575,9 @@ video {
 .h-10 {
   height: 2.5rem;
 } 
+.h-\[560px\] {
+  height: 560px;
+} 
 .max-h-\[500\] {
   max-height: 500;
 } 
@@ -613,6 +616,9 @@ video {
 } 
 .flex-1 {
   flex: 1 1 0%;
+} 
+.flex-shrink-0 {
+  flex-shrink: 0;
 } 
 .grid-cols-\[1fr_40px\] {
   grid-template-columns: 1fr 40px;
