--- a/views/index.pug
+++ b/views/index.pug
@@ -3,12 +3,12 @@ extends layout
 block content
   div.mx-auto.container
     h1(class="my-12 text-4xl font-bold text-center text-blue-500") Arc's Message Board
-    div(class="grid grid-rows-[50px_1fr_auto] h-[500px] mx-auto w-full md:w-[800px] border-gray-800 shadow-xl")
+    div(class="grid grid-rows-[50px_1fr_auto] h-[560px] mx-auto w-full md:w-[800px] border-gray-800 shadow-xl")
       div(class="grid items-center text-center text-white shadow bg-slate-950 rounded-tr-md rounded-tl-md") Announcements
       div(class="px-10 pt-5 overflow-auto bg-slate-200")
         each message in messages
           div.flex.gap-x-4.mb-6
-            div(class="grid w-10 h-10 bg-blue-200 rounded-full place-items-center")=message.user.charAt(0).toUpperCase()
+            div(class="grid flex-shrink-0 w-10 h-10 bg-blue-200 rounded-full place-items-center")=message.user.charAt(0).toUpperCase()
             div
               p=message.user 
               h3.rounded-lg.shadow.px-4.py-2.bg-white=message.text
