--- a/views/header.ejs
+++ b/views/header.ejs
@@ -4,4 +4,5 @@
     <meta charset="utf-8" />
     <title><%= title %></title>
     <link rel="stylesheet" href="styles/style.css">
+    <script src="https://kit.fontawesome.com/fc5a762e4d.js" crossorigin="anonymous"></script>
 </head>
